--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lailatan.calc_insulina_activa">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/insulina_ico"
@@ -15,10 +10,18 @@
         android:roundIcon="@drawable/insulina_ico"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.lailatan.calc_insulina_activa.InsulinaActivity" />
-        <activity android:name="com.lailatan.calc_insulina_activa.InsulinaActivaCalcularActivity" />
-        <activity android:name="com.lailatan.calc_insulina_activa.InsulinaBuscarActivity" />
-        <activity android:name="com.lailatan.calc_insulina_activa.InsulinaActivaActivity" />
+        <activity
+            android:name="com.lailatan.calc_insulina_activa.InsulinaActivity"
+            android:parentActivityName=".InsulinaBuscarActivity"/>
+        <activity
+            android:name="com.lailatan.calc_insulina_activa.InsulinaActivaCalcularActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name="com.lailatan.calc_insulina_activa.InsulinaBuscarActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name="com.lailatan.calc_insulina_activa.InsulinaActivaActivity"
+            android:parentActivityName=".InsulinaActivaCalcularActivity"/>
         <activity
             android:name="com.lailatan.calc_insulina_activa.MainActivity"
             android:theme="@style/SplashTheme"> <!-- Aquí llamamos nuestro tema -->
@@ -28,6 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".notifications.AlarmBroadcast"/>
     </application>
 
 </manifest>
